fix border radius on collapsed group

--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@
   overflow: hidden;
 }
 
+.ReactSortableItemGroups__group--collapsed {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom: 1px solid #D8D8D8;
+}
+
 .ReactSortableItemGroups__group-header {
   background-color: #F7F7F7;
   text-transform: capitalize; /* temporary */
